-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
5.14.0
-
None
Most other places in Qt use the casing Url (e.g. QUrl, FileDialog::fileUrl). That makes FolderListModel's fileURL easy to mistype (particularly since it is a context property with no autocompletion, etc). It would be nice to support fileUrl in FolderListModel (alongside of, or perhaps deprecating fileURL).
- is required for
-
QTBUG-32039 FolderListModel needs to have API review, fix some API warts and be a maintained API instead of Qt.labs
-
- Reported
-
- relates to
-
QTBUG-87820 Deprecate FolderListModel's fileURL role
-
- Closed
-