Add standard casing for FolderListModel::fileUrl

Task-number: QTBUG-82298
Change-Id: Iad95b7a90c2c247c44b8656b0fd104843bd4fa8c
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>